# twine-spool-service

./: .dev.vars  Cargo.toml  README.md  bun.lockb  package.json  schema.sql  wrangler.toml
.cargo/: config.toml
.github/workflows/: deploy.yaml
admin-frontend/: index.html  package-lock.json  package.json  svelte.config.js
admin-frontend/src/: app.css  app.html
admin-frontend/src/lib/state/: ApiKeys.ts  RestCommands.ts
admin-frontend/src/routes/: +layout.svelte  +page.svelte
admin-frontend/src/routes/apikeys/: +page.svelte
migrations/: 0001_create_tables.sql
public/: register.html
src/: access_control.rs  admin_routes.rs  car.rs  d1_store.rs  dag_json.rs  errors.rs  formatting.rs  lib.rs  logging.rs  old_routes.rs  randomness_test.rs  registration.rs  store.rs
