[package]
name = "twine-spool-service"
version = "0.1.0"
edition = "2021"
authors = [ "Jasper Palfree <jasper@wellcaffeinated.net>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = []
admin = []

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5.0", features = ["d1", "http"] }
worker-macros = { version = "0.5.0" }
console_error_panic_hook = { version = "0.1.1" }
serde = "1.0.219"
serde_bytes = "0.11.17"
serde-email = "3.2.0"
fvm_ipld_car = "0.8.2"
futures = "0.3"
twine_protocol = { version = "0.1.3", features = ["build", "sha3", "blake2b", "blake3"] }
twine_http_store = { version = "0.1.3", features = ["server"] }
axum = { version = "0.8.3", default-features = false, features = ["json", "macros"] }
tower = { version = "0.5.2" }
tower-http = { version = "0.6", features = ["cors"] }
hyper = { version = "1.6.0" }
http = { version = "1.3.1" }
http-body-util = { version = "0.1.3" }
thiserror = "2.0.12"
rand = "0.9.1"
chrono = "0.4.40"
scrypt = { version = "0.11" }
hex = "0.4"
getrandom = { version = "0.3.2", features = ["wasm_js"] }
async-trait = "0.1.88"
log = "0.4.27"
web-sys = { version = "0.3" }
serde-wasm-bindgen = "0.6.5"

[dependencies.ring]
version = "0.17.14"
features = ["wasm32_unknown_unknown_js"]

[dependencies.uuid]
version = "1.16.0"
features = [
  "v4",
  "js",
  "serde"
]